# afd-plugin

./: AGENTS.md  MANIFEST.in  README.md  cam_ops.py  pyproject.toml  setup.py  test_cam_ops.py
.claude/skills/run-e2e/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 100-bug-report.yml  200-feature-request.yml  300-rfc.yml  400-documentation.yml  500-ci-failure.yml
.github/workflows/: cpu-only-ci.yml
afd_plugin/: __init__.py  config.py  envs.py  offline_schedule.py  tracing.py  validation.py
afd_plugin/compat/: __init__.py  async_dp.py  profiler.py  vllm.py
afd_plugin/compat/ascend/: __init__.py  cam_stub_ops.py  ops.py  profiler.py  runtime.py
afd_plugin/compat/patches/: __init__.py  ascend_platform.py  async_dp_engine.py  async_dp_forward_context.py  config_validation.py  engine_core.py
afd_plugin/connectors/: README.md  __init__.py  base.py  decode_bench.py  dummy.py  factory.py  metadata.py  npu_dummy.py  p2p.py
afd_plugin/connectors/ascend/: __init__.py  async_cam.py  camp2p.py
afd_plugin/connectors/gpu/: __init__.py  p2p.py
afd_plugin/connectors/npu/: __init__.py  camp2p.py
afd_plugin/distributed/: __init__.py  afd_process_group.py  process_group.py  topology.py
afd_plugin/model_executor/: __init__.py
afd_plugin/model_executor/models/: __init__.py  deepseek_v2.py  forward_context.py
afd_plugin/models/: __init__.py  deepseek_v2.py  forward_context.py
afd_plugin/runtime/: __init__.py  _optional.py  attention.py  attention_model_runner.py  attention_worker.py  cuda_graph.py  dbo.py  ffn.py  ffn_model_runner.py  ffn_worker.py  ubatch_wrapper.py
afd_plugin/v1/: __init__.py  offline_scheduler.py
afd_plugin/v1/worker/: __init__.py  attention_model_runner.py  attention_worker.py  cuda_graph.py  dbo.py  ffn_model_runner.py  ffn_worker.py  ubatch_wrapper.py
afd_plugin/v1/worker/ascend/: __init__.py  attention_model_runner.py  attention_worker.py  ffn_model_runner.py  ffn_worker.py  forward_context.py  npu_ubatch_wrapper.py  pcp_debug.py  ubatch_utils.py  ubatch_wrapper.py  ubatching.py
csrc/: CMakeLists.txt  README.md  build_aclnn.sh
csrc/a2e/op_host/: CMakeLists.txt  a2e_def.cpp  a2e_proto.cpp  a2e_tiling.cpp  aclnn_a2e.cpp
csrc/a2e/op_kernel/: a2e.cpp  a2e.h  data_copy.h
csrc/aclnn_torch_adapter/: op_api_common.h
csrc/cmake/: config.cmake  func.cmake
csrc/e2a/op_host/: CMakeLists.txt  aclnn_e2a.cpp  aclnn_e2a.h  e2a_def.cpp  e2a_proto.cpp
csrc/e2a/op_kernel/: e2a.cpp
csrc/gpu/: README.md
csrc/npu/: README.md  build_aclnn.sh
csrc/npu/a2e/op_host/: aclnn_a2e.h
csrc/npu/a2e/op_kernel/: a2e_tiling.h
csrc/npu/cmake/: func.cmake
csrc/npu/e2a/op_host/: e2a_tiling.cpp
csrc/npu/e2a/op_kernel/: e2a.h  e2a_tiling.h
csrc/npu/torch_extension/: CMakeLists.txt
csrc/torch_extension/: CMakeLists.txt  torch_binding.cpp  torch_binding_meta.cpp
docs/: ATTENTION_RUNTIME_DESIGN.md  FFN_RUNTIME_DESIGN.md  GPU_E2E_TESTS.md  PHASE0_COMPATIBILITY_INVENTORY.md  PHASE4_P2P_DESIGN.md  PHASE6_CUDA_GRAPH_IMPLEMENTATION.md
docs/gpu/: ATTENTION_RUNTIME_DESIGN.md  FFN_RUNTIME_DESIGN.md  GPU_E2E_TESTS.md  MIGRATION_PLAN.md  PHASE4_P2P_DESIGN.md  PHASE6_CUDA_GRAPH_IMPLEMENTATION.md
docs/npu/: ASCEND_CUSTOM_OPS_BUILD.md  NPU_ADAPTATION_GAP_ANALYSIS.md  NPU_AFD_ASYNC_CAM_STUB_OPS.md  NPU_AFD_ASYNC_CONNECTOR_DESIGN.md  NPU_AFD_ASYNC_CONNECTOR_MOE_UBATCH_DESIGN.md  NPU_ASYNC_DP_FRAMEWORK_MIGRATION_POINTS.md  NPU_ASYNC_DP_REQUIRED_MIGRATION_POINTS.md  NPU_ATTENTION_RUNTIME_DESIGN.md  NPU_E2E_TESTS.md  NPU_FFN_RUNTIME_DESIGN.md  NPU_UBATCH_DESIGN.md
example/deepseekv2-lite/: README.md  benchmark.sh  dbo_compile_graph_full_decode_only_2a2f.sh  eager_1a1f.sh  run.py
example/deepseekv2-lite/prefill_decode_disaggregation/: 2p1a1f_eager_dbo.sh  2p1a1f_graph_dbo.sh
example/deepseekv2-lite/prefill_decode_multiplexing/: 2a2f_eager_dbo_dp1tp2.sh  2a2f_eager_dbo_dp2tp1.sh  2a2f_graph_dbo_dp1tp2.sh  2a2f_graph_dbo_dp2tp1.sh
examples/npu/dummy_1a1f/: README.md  deploy.sh
tests/: conftest.py  e2e_deepseek_v2_1a1f.py  e2e_deepseek_v2_afd.py  test_attention_runtime.py  test_config.py  test_config_validation_patch.py  test_connectors.py  test_cuda_graph_policy.py  test_e2e_runner.py  test_engine_core_patch.py  test_ffn_runtime.py  test_gpu_e2e_deepseek_v2.py  test_models_forward_context.py  test_p2p_connector.py  test_package.py  test_runtime_classpaths.py  test_validation.py
tests/e2e/: conftest.py  helpers_gsm8k.py  runner.py  test_runner.py
tests/e2e/accuracy/: test_gsm8k_gpu.py  test_gsm8k_npu.py
tests/e2e/features/: conftest.py  test_graph_gpu.py  test_graph_npu.py  test_profiler_gpu.py  test_profiler_npu.py  test_serving_gpu.py  test_serving_npu.py  test_tp_gpu.py  test_tp_npu.py
tests/e2e/gpu/deepseek_v2_lite/: runner.py  runner_1a1f.py  test_deepseek_v2_lite.py  test_runner.py  test_tp2_cuda_graph.py
tests/e2e/models/deepseek_v2_lite/: test_e2e_gpu.py  test_e2e_npu.py
tests/e2e/npu/: test_a2e_e2a_ops.py  test_tp2_acl_graph.py
tests/e2e/npu/deepseek_v2_lite/: __init__.py  runner.py  test_deepseek_v2_lite.py  test_runner.py
tests/unit/: test_envs.py  test_offline_schedule.py  test_offline_scheduler.py
tests/unit/compat/: test_ascend_ops.py  test_async_dp.py  test_profiler.py  test_runtime.py
tests/unit/compat/ascend/: test_profiler.py
tests/unit/compat/patches/: test_ascend_platform.py  test_async_dp_engine.py  test_async_dp_forward_context.py  test_engine_core.py
tests/unit/config/: test_config.py  test_validation.py
tests/unit/connectors/: test_async_cam_connector.py  test_base_factory.py  test_camp2p_connector.py  test_p2p_connector.py
tests/unit/model_executor/models/: test_forward_context.py
tests/unit/package/: test_ascend_build_files.py  test_package.py
tests/unit/v1/worker/: test_attention_model_runner.py  test_cuda_graph.py  test_dbo.py  test_ffn_model_runner.py  test_npu_runtime.py  test_runtime_classpaths.py
