[build-system]
requires = ["setuptools>=61", "wheel", "setuptools-scm[toml]>=8", "pybind11>=2.12"]
build-backend = "setuptools.build_meta"

[project]
name = "vllm-afd-plugin"
dynamic = ["version"]
description = "vLLM external plugin for Attention-FFN Disaggregation (AFD)"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "AFD plugin contributors" }]
keywords = ["vllm", "afd", "attention", "ffn", "disaggregation", "inference"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

# Keep vLLM optional so macOS and CPU-only development can run import/config tests.
# Install the runtime extra only in environments with a compatible vLLM wheel.
[project.optional-dependencies]
vllm = ["vllm==0.19.1"]

[project.urls]
Homepage = "https://github.com/vllm-project/afd-plugin"
Repository = "https://github.com/vllm-project/afd-plugin"
Documentation = "https://github.com/vllm-project/afd-plugin#readme"
"Bug Tracker" = "https://github.com/vllm-project/afd-plugin/issues"

[project.entry-points."vllm.general_plugins"]
afd = "afd_plugin:register_afd"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "ruff>=0.15.7,<0.16",
    "setuptools-scm>=8",
]

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["."]
include = ["afd_plugin*"]
exclude = ["afd_plugin._cann_ops_custom*"]
namespaces = false

[tool.setuptools.package-data]
afd_plugin = ["py.typed", "_cann_ops_custom/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
markers = [
    "vllm_runtime: tests requiring an importable vLLM runtime dependency.",
    "gpu: GPU-gated AFD integration tests.",
    "npu: NPU-gated AFD integration tests.",
]

[tool.ruff]
line-length = 88
target-version = "py310"
extend-exclude = [".venv", "venv", "build", "dist"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "N",
    "UP",
    "W",
    "B",
    "G",
    "ISC",
    "SIM",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ty]

[tool.ty.analysis]
allowed-unresolved-imports = ["torch.**", "vllm.**"]
